--- a/Aribilgi.BankApp.Web/Views/Home/Index.cshtml
+++ b/Aribilgi.BankApp.Web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Aribilgi.BankApp.Web.Data.Entities
+@model List<ApplicationUser>
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -26,19 +28,14 @@
                         <td>@item.Surname</td>
                         <td><getAccountCount application-user-id="@item.Id"></getAccountCount></td>
                         <td>
-                        <a href="#" class="btn-sm btn-primary">Create New Account</a>
+                            <a href="/Account/Index?UserId=@item.Id" class="btn-sm btn-primary">Create New Account</a>
                         </td>
 
                     </tr>
 
                 }
-
-
             }
-
-
         </tbody>
-
 
     </table>
 
